@@ -1,3 +1,11 @@
+2023-02-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poked/poked.c: Include `<unistd.h>' for `getuid'.
+	(poked_options): Remove const-qualifier from `socket_path'.
+	(poked_options_init): Change the default socket path to have
+	UID in the path.
+	(main): Adapt.
+
 2023-01-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* poked/usock.c: Include `<sys/stat.h>' for `umask'.
